# esp32-device

./: CMakeLists.txt  README.md  partitions_example.csv  sdkconfig
components/wifi_connecting/: wifi_connecting.h
html/: web.html
main/: CMakeLists.txt  component.mk  ds18b20.c  main.c
